tests/toylang/neg/001565_mutation.toylang
program a = { while == do sleep; } .
